deploy/kubernetes/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/docker-default: "true"
        io.kompose.service: grafana
    spec:
      containers:
        - env:
            - name: GF_AUTH_ANONYMOUS_ENABLED
              value: "true"
            - name: GF_AUTH_ANONYMOUS_ORG_ROLE
              value: Admin
            - name: GF_AUTH_DISABLE_LOGIN_FORM
              value: "true"
            - name: GF_FEATURE_TOGGLES_ENABLE
              value: traceqlEditor
          image: grafana/grafana:9.3.2
          name: grafana
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /etc/grafana/provisioning/datasources/datasources.yaml
              name: grafana-cm0
              subPath: datasources.yaml
            - mountPath: /etc/grafana/provisioning/dashboards/main.yaml
              name: grafana-cm1
              subPath: main.yaml
            - mountPath: /var/lib/grafana/dashboards
              name: grafana-cm2
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: grafana-datasources.yaml
                path: datasources.yaml
            name: grafana-cm0
          name: grafana-cm0
        - configMap:
            items:
              - key: grafana-dashboards.yaml
                path: main.yaml
            name: grafana-cm1
          name: grafana-cm1
        - configMap:
            name: grafana-cm2
          name: grafana-cm2
status: {}
