deploy/kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    traefik.enable: "false"
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        traefik.enable: "false"
      creationTimestamp: null
      labels:
        io.kompose.network/docker-default: "true"
        io.kompose.service: redis
    spec:
      containers:
        - args:
            - redis-server
            - --save
            - "20"
            - "1"
            - --loglevel
            - verbose
          image: redis:7
          name: redis
          resources: {}
          # volumeMounts:
          #   - mountPath: /data
          #     name: cache
      restartPolicy: Always
      # volumes:
      #   - hostPath:
      #       path: /Users/Alex.Li/development/bagman/deploy/kubernetes/cache
      #     name: cache
status: {}
