deploy/kubernetes/tempo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: tempo
  name: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tempo
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/docker-default: "true"
        io.kompose.service: tempo
    spec:
      containers:
        - args:
            - -config.file=/etc/tempo.yaml
          image: grafana/tempo:latest
          name: tempo
          ports:
            - containerPort: 14268
            - containerPort: 3200
            - containerPort: 4317
            - containerPort: 4318
            - containerPort: 9411
          resources: {}
          volumeMounts:
            - mountPath: /etc/tempo.yaml
              name: tempo-cm0
              subPath: tempo.yaml
            - mountPath: /tmp/tempo
              name: tempo-cm1
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: tempo.yaml
                path: tempo.yaml
            name: tempo-cm0
          name: tempo-cm0
        - configMap:
            name: tempo-cm1
          name: tempo-cm1
status: {}
