deploy/kubernetes/traefik-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
        io.kompose.network/docker-default: "true"
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.9
          args:
            - --api.insecure
            - --providers.kubernetescrd=true
            - --entryPoints.web.address=:80
            - --log.level=DEBUG
            - --accesslog=true
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
