deploy/kubernetes/bagman-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: bagman
spec:
  sessionAffinity: ClientIP
  ports:
    - name: socket
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: bagman-deployment
status:
  loadBalancer: {}
