deploy/kubernetes/mimir-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ./docker/docker-compose.yml --volumes=configMap
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mimir
  name: mimir
spec:
  ports:
    - name: "9009"
      port: 9009
      targetPort: 9009
  selector:
    io.kompose.service: mimir
status:
  loadBalancer: {}
