deploy/kubernetes/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service

spec:
  type: LoadBalancer
  ports:
    - name: dashboard
      port: 8081
      targetPort: 8080
    - name: web
      port: 8080
      targetPort: 80
  selector:
    app: traefik
---
